--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Rotman School of Managment</h2>
-							<p>Digital Learning at the .<br />
+							<h2>Rotman School of Management</h2>
+							<p>Digital Learning at the <br />
 							University of Toronto.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
